# stream-unzip

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY_CHECKLIST.md  async_stream_unzip.py  codecov.yml  eleventy.config.js  mkdocs.yml  package-lock.json  package.json  personal-data-exclusions.txt  pyproject.toml  requirements-docs.in  requirements-docs.txt  setup.py  stream_unzip.py  test.py  test_async.py
.circleci/: config.yml
.github/workflows/: build-source-package-and-wheels.yml  deploy-docs-to-github-pages.yml  deploy-package-to-pypi.yml  docs.yml  publish-pypi.yml  test.yml
docs/: CNAME  api.md  async-interface.md  contributing.md  exceptions.md  features.md  get-started.md  getting-started.md  index.md  limitations.md  publish-a-release.md
docs/api/: encryption-types.md  exception-hierarchy.md  functions.md
docs/assets/: dit-extra.css  styles.scss
docs/contributing/: publish-a-release.md
docs/get-started/: async-interface.md  exceptions.md  features.md
docs/sass/: _settings.scss
python/stream_unzip/: __init__.py
src/: lib.rs
stream_unzip/: __init__.py
